# nice_home_assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
src/api/: account_api.py  api_client.py  customer_api.py
src/config/: environment.py
src/models/: account.py  customer.py
src/pages/: account_details_page.py  accounts_overview_page.py  base_page.py  bill_pay_page.py  contact_page.py  find_transactions_page.py  forgot_login_page.py  login_page.py  open_account_page.py  register_page.py  request_loan_page.py  transfer_funds_page.py  update_profile_page.py
src/utils/: data_factory.py  helpers.py  retry.py
tests/: conftest.py
tests/e2e/: test_banking_workflow.py
tests/negative/: test_negative_scenarios.py
