[project]
name = "parabank-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
   "playwright",
   "pytest",
   "pytest-playwright",
   "requests",
   "python-dotenv",
   "allure-pytest",
   "pytest-xdist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end banking workflow tests",
    "negative: negative scenario tests",
]
addopts = "-vs"

[tool.ruff]
line-length = 120
target-version = "py311"
